--- a/Icon.html
+++ b/Icon.html
@@ -324,7 +324,7 @@
       <a href="DespreNoi.html">Despre noi</a>
     </div>
     <div class="center">
-      <a href="MainPage.html">Car•Scan</a>
+      <a href="index.html">Car•Scan</a>
     </div>
     <div class="right"></div>
   </nav>
