--- a/navbar.html
+++ b/navbar.html
@@ -113,7 +113,7 @@
     <a href="DespreNoi.html">Despre noi</a>
   </div>
   <div class="center">
-    <a href="MainPage.html">Car•Scan</a>
+    <a href="index.html">Car•Scan</a>
   </div>
   <div class="right"></div>
 </nav>
